# Generated by Django 6.0.1 on 2026-02-20 11:45

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('gestion_citas', '0005_cita_horariomedico'),
    ]

    operations = [
        migrations.AlterField(
            model_name='cita',
            name='urgencia',
            field=models.IntegerField(choices=[(1, 'Baja'), (2, 'Media'), (3, 'Alta')], default=1),
        ),
        migrations.CreateModel(
            name='PropuestaReasignacion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_oferta', models.DateField()),
                ('hora_oferta', models.TimeField()),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('fecha_limite', models.DateTimeField(help_text='Hasta cuándo es válida esta oferta')),
                ('estado', models.CharField(choices=[('PENDIENTE', 'Pendiente de respuesta'), ('ACEPTADA', 'Aceptada por el paciente'), ('RECHAZADA', 'Rechazada por el paciente'), ('EXPIRADA', 'Tiempo límite agotado')], default='PENDIENTE', max_length=20)),
                ('cita_original', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='propuestas', to='gestion_citas.cita')),
                ('medico_oferta', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='gestion_citas.medico')),
            ],
        ),
    ]
