# Generated by Django 6.0.1 on 2026-03-06 12:16

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('gestion_citas', '0007_gestionhorario'),
    ]

    operations = [
        migrations.CreateModel(
            name='ConfiguracionReasignacion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('peso_urgencia', models.FloatField(default=15.0)),
                ('peso_antiguedad', models.FloatField(default=0.1)),
                ('prioridad_turno', models.FloatField(default=10.0)),
            ],
            options={
                'verbose_name': 'Configuración de Reasignación',
                'verbose_name_plural': 'Configuraciones de Reasignación',
            },
        ),
        migrations.RemoveField(
            model_name='propuestareasignacion',
            name='fecha_oferta',
        ),
        migrations.RemoveField(
            model_name='propuestareasignacion',
            name='hora_oferta',
        ),
        migrations.RemoveField(
            model_name='propuestareasignacion',
            name='medico_oferta',
        ),
        migrations.AddField(
            model_name='cita',
            name='centro',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='gestion_citas.centro'),
        ),
        migrations.AddField(
            model_name='cita',
            name='especialidad',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='gestion_citas.especialidad'),
        ),
        migrations.AddField(
            model_name='propuestareasignacion',
            name='hueco',
            field=models.OneToOneField(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='es_propuesta_de', to='gestion_citas.cita'),
        ),
        migrations.AddField(
            model_name='propuestareasignacion',
            name='paciente',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='propuestas_recibidas', to='gestion_citas.paciente'),
        ),
        migrations.CreateModel(
            name='Notificacion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('mensaje', models.TextField()),
                ('leida', models.BooleanField(default=False)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('paciente', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='notificaciones', to='gestion_citas.paciente')),
                ('propuesta', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='gestion_citas.propuestareasignacion')),
            ],
        ),
    ]
