@startuml
skinparam classAttributeIconSize 0

' =====================
' Enumeraciones
' =====================
enum RolUsuario {
  PACIENTE
  MEDICO
  ADMINISTRATIVO
}

enum Turno {
  MANANA
  TARDE
}

enum EstadoCita {
  PENDIENTE
  CONFIRMADA
  CANCELADA
  EN_ESPERA_REASIGNACION
}

enum EstadoPropuesta {
  PENDIENTE
  ACEPTADA
  RECHAZADA
  EXPIRADA
}

' =====================
' Usuario (Django Base)
' =====================
class User {
  id : BigAutoField
  username : CharField
  email : EmailField
  rol : RolUsuario
}

' =====================
' Entidades de Dominio
' =====================
class Centro {
  nombre : CharField
}

class Especialidad {
  nombre : CharField
}

class MedicoProfile {
  numeroColegiado : CharField
}

' Añadido: Para saber cuándo puede recibir citas (R12)
class HorarioMedico { 
  diaSemana : Integer
  horaInicio : Time
  horaFin : Time
}

class PacienteProfile {
  preferenciaTurno : Turno
  telefono : CharField
}

class Cita {
  fecha : DateField
  horaInicio : TimeField
  urgencia : IntegerField  
  ' ^ Movido aquí: La urgencia es de ESTA cita, no del paciente para siempre
  estado : EstadoCita
}

' =====================
' Motor de Reasignación
' =====================
class PropuestaReasignacion {
  expiraEn : DateTimeField (TTL)
  estado : EstadoPropuesta
}

class Notificacion {
  mensaje : TextField
  leida : Boolean
}

class ConfiguracionReasignacion {
  pesoUrgencia : FloatField
  pesoAntiguedad : FloatField
}

class MotorReasignacion <<service>> {
  + buscarCandidatos(hueco : Cita)
  + generarPropuesta()
}

' =====================
' Relaciones
' =====================
User "1" --> "0..1" MedicoProfile
User "1" --> "0..1" PacienteProfile

MedicoProfile "1" --> "1..*" Especialidad
MedicoProfile "1" --> "0..*" HorarioMedico : define jornada >

PacienteProfile "1" --> "0..*" Cita : solicita >
MedicoProfile "1" --> "0..*" Cita : atiende >

' Una propuesta vincula una Cita (el hueco libre) con un Paciente candidato
PropuestaReasignacion "1" --> "1" Cita : oferta hueco >
PropuestaReasignacion "1" --> "1" PacienteProfile : candidato >
PropuestaReasignacion "1" --> "1..*" Notificacion : genera >

MotorReasignacion ..> Cita : gestiona
MotorReasignacion ..> ConfiguracionReasignacion : lee parametros

@enduml